<resources>
    <string name="app_name">Paper Phone</string>
    <string name="notes">Notes</string>
    <string name="maps_info">Printing maps and directions\nrequires a printer which supports\ndouble sided printing</string>
    <string name="contacts_info">Choose up to 7 contacts to print\non your Paper Phone</string>
    <string name="calendar_info">Choose the calendars you want\nto print to your Paper Phone</string>
    <string name="weather_info">Add a weather report for today</string>
    <string name="tasks_info">Choose the task lists you want\nto print to your Paper Phone</string>
    <string name="notes_info">An empty space will be added to your\nPaper Phone to capture\nthoughts and ideas</string>
    <string name="photos_info">Add a screenshot or\npicture to your Paper Phone</string>
    <string name="contactless_info">Cut marks will be added to\nyour Paper Phone for you\nto store a contactless card</string>
    <string name="paper_apps_info">Choose a Paper App to print\nto your Paper Phone</string>
    <string name="item_calendar">Calendar</string>
    <string name="item_contacts">Contacts</string>
    <string name="item_maps">Maps</string>
    <string name="item_tasks">Tasks</string>
    <string name="item_photos">Photos</string>
    <string name="item_weather">Weather</string>
    <string name="item_contactless">Contactless</string>
    <string name="item_paperapps">Paper Apps</string>
    <string name="create_pdf">Create PDF</string>
    <string name="folding_instructions_label">Folding Instructions</string>
    <string name="next">Next</string>
    <string name="your_name">YOUR NAME</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_location">Current Location</string>
    <string name="going_to">Going to</string>
    <string name="maps_instructions">Print maps and directions onto\nthe back of your Paper Phone</string>
    <string name="global_instructions">Tap to select the things you want\nto print to your Paper Phone</string>
    <string name="print_from_phone">PRINT FROM PHONE</string>
    <string name="print">PRINT</string>
    <string name="folding">FOLDING</string>
    <string name="folding_instructions">To fold your phone, lay the page map\nside up and fold it in half so the two\n
        little circles at the bottom of the page\ntouch\n\nThen fold in half again so the squares\nare touching\n\nThen fold
        in half one last time\n\nIf you would like to keep a contactless card\ninside your Paper Phone then please carefully\ncut along the dotted diagonal lines.
    </string>
    <string name="done">Done</string>
    <string name="choose_gaccount">Please choose the Google\naccount you wish to use</string>
    <string name="onboarding_folding">
        This experiment prints a\nlittle paper phone with the\nmost important information\nyou\'ll need for the day
    </string>
    <string name="onboarding_selecting">Just choose the information\nyou would like to include on\nyour Paper Phone and\n
        hit print
    </string>
    <string name="onboarding_welcome">A printable Paper Phone which\nhelps you take a break away\nfrom your digital world</string>
    <string name="calendar_permission_rationale">
        If you would like to include calendar entries on your Paper Phone you will need to allow this app to access your calendar.
    </string>
    <string name="contacts_permission_rationale">
        If you would like to include contacts entries on your Paper Phone you will need to allow this app to access your contacts.
    </string>
    <string name="location_permission_rationale">
        In order to include directions on your Paper Phone you will need to allow this app to access your location.
    </string>
    <string name="storage_permission_rationale">
        In order to include screenshots and photos on your Paper Phone you will need to allow this app to access the pictures on your device.
    </string>
    <string name="rationale_area">%s\n\nYou can do this in the settings.\n\nWould you like to do this now?</string>

    <string name="filename">%1$s\'s Paper Phone - %2$s</string>
</resources>
