<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="84dp"
        style="@style/Title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folding"
    />

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="220dp"
        android:id="@+id/animation"
        android:layout_width="130dp"
        android:layout_height="98dp"
        android:src="@drawable/folding_animation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14.2sp"
        android:layout_marginBottom="120dp"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:text="@string/folding_instructions"
    />

    <Button
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/done"
        android:layout_marginBottom="32dp"
    />

</FrameLayout>