<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.withgoogle.experiments.unplugged.ui.widget.ModuleView
        android:id="@+id/module"
        android:layout_width="80dp"
        android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>

    <TextView
        android:layout_marginTop="36dp"
        android:id="@+id/label"
        android:text="@string/current_location"
        android:textSize="12.4sp"
        android:textColor="@color/black"
        android:letterSpacing="0.16"
        android:fontFamily="@font/varela_regular"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/module"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="230dp"
        android:layout_height="2dp"
        android:background="@color/black" android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/label" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        android:id="@+id/view"/>

    <TextView
        android:id="@+id/current_location"
        android:textSize="16.2sp"
        android:textColor="@color/black"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/worksans_regular"
        tools:text="London,\nUnited Kingdom"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14.2sp"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:text="@string/weather_info"
        app:layout_constraintBottom_toTopOf="@+id/finish" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/finish"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>